kubernetes/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuxify-api-gateway
  labels:
    app: tuxify-api-gateway
    environment: production

spec:
  selector:
    matchLabels:
      app: tuxify-api-gateway
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: tuxify-api-gateway
        environment: production
    spec:
      containers:
        - name: tuxify-api-gateway
          image: ghcr.io/tux-inc/tuxify-api-gateway:latest
          ports:
            - containerPort: 3000
              name: tuxify-api-gateway
              protocol: TCP
          resources: {}
      imagePullSecrets:
        - name: github-container-registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuxify-api-mailer
  labels:
    app: tuxify-api-mailer
    environment: production

spec:
  selector:
    matchLabels:
      app: tuxify-api-mailer
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: tuxify-api-mailer
        environment: production
    spec:
      containers:
        - name: tuxify-api-mailer
          image: ghcr.io/tux-inc/tuxify-api-mailer:latest
          resources: {}
      imagePullSecrets:
        - name: github-container-registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuxify-api-auth
  labels:
    app: tuxify-api-auth
    environment: production

spec:
  selector:
    matchLabels:
      app: tuxify-api-auth
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: tuxify-api-auth
        environment: production
    spec:
      containers:
        - name: tuxify-api-auth
          image: ghcr.io/tux-inc/tuxify-api-auth:latest
          resources: {}
      imagePullSecrets:
        - name: github-container-registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuxify-api-flows
  labels:
    app: tuxify-api-flows
    environment: production

spec:
  selector:
    matchLabels:
      app: tuxify-api-flows
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: tuxify-api-flows
        environment: production
    spec:
      containers:
        - name: tuxify-api-flows
          image: ghcr.io/tux-inc/tuxify-api-flows:latest
          resources: {}
      imagePullSecrets:
        - name: github-container-registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuxify-api-providers
  labels:
    app: tuxify-api-providers
    environment: production

spec:
  selector:
    matchLabels:
      app: tuxify-api-providers
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: tuxify-api-providers
        environment: production
    spec:
      containers:
        - name: tuxify-api-providers
          image: ghcr.io/tux-inc/tuxify-api-providers:latest
          resources: {}
      imagePullSecrets:
        - name: github-container-registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuxify-api-google
  labels:
    app: tuxify-api-google
    environment: production

spec:
  selector:
    matchLabels:
      app: tuxify-api-google
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: tuxify-api-google
        environment: production
    spec:
      containers:
        - name: tuxify-api-google
          image: ghcr.io/tux-inc/tuxify-api-google:latest
          resources: {}
      imagePullSecrets:
        - name: github-container-registry
