kubernetes/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tuxify-api
  labels:
    app: tuxify-api
spec:
  selector:
    app: tuxify-api
  ports:
    - name: tuxify-api
      port: 3000
      targetPort: 3000
